--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.teamscorpion.youtubealarm">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> -->
+    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/icon_final"
@@ -9,6 +14,15 @@
         android:roundIcon="@mipmap/icon_round_final"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity
+            android:name=".Audio_alarm"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".Locked_alarm"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
+        <activity android:name=".popupActivity"></activity>
         <activity android:name=".Main1" />
         <activity
             android:name=".Main2"
@@ -24,6 +38,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <receiver android:name=".AlarmBroadcast" />
+        <receiver android:name=".NotificationActionService" />
+
+        <service android:name=".Audio_alarm_service" />
     </application>
 
 </manifest>
